<resources>
    <string name="app_name">WorkshopsCentral</string>
    <string name="seeallws">See All Worskshops</string>
    <string name="signinText">Already have an account?</string>
    <string name="registerText">Not a member?</string>
    <string name="signinNow">Sign in!</string>
    <string name="register">Register now!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
